// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component - Functional Tests matches snapshot for collapsible accordion 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="border-b"
    data-orientation="vertical"
    data-slot="accordion-item"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-_r_d_"
        aria-expanded="true"
        class="flex flex-1 items-center justify-between py-4 text-left text-sm font-medium transition-all [&[data-state=open]>svg]:rotate-90"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-slot="accordion-trigger"
        data-state="open"
        id="radix-_r_c_"
        type="button"
      >
        Collapsible Section
        <svg
          class="lucide lucide-chevron-right text-GRAY_700 h-4 w-4 shrink-0 cursor-pointer transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_c_"
      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
      data-orientation="vertical"
      data-slot="accordion-content"
      data-state="open"
      id="radix-_r_d_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="pt-0 pb-4"
      >
        Collapsible Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Component - Functional Tests matches snapshot for default accordion 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="border-b"
    data-orientation="vertical"
    data-slot="accordion-item"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-_r_7_"
        aria-disabled="true"
        aria-expanded="true"
        class="flex flex-1 items-center justify-between py-4 text-left text-sm font-medium transition-all [&[data-state=open]>svg]:rotate-90"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-slot="accordion-trigger"
        data-state="open"
        id="radix-_r_6_"
        type="button"
      >
        Section 1
        <svg
          class="lucide lucide-chevron-right text-GRAY_700 h-4 w-4 shrink-0 cursor-pointer transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_6_"
      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
      data-orientation="vertical"
      data-slot="accordion-content"
      data-state="open"
      id="radix-_r_7_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="pt-0 pb-4"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Component - Functional Tests matches snapshot for multiple type accordion 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="border-b"
    data-orientation="vertical"
    data-slot="accordion-item"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-_r_9_"
        aria-expanded="true"
        class="flex flex-1 items-center justify-between py-4 text-left text-sm font-medium transition-all [&[data-state=open]>svg]:rotate-90"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-slot="accordion-trigger"
        data-state="open"
        id="radix-_r_8_"
        type="button"
      >
        Section 1
        <svg
          class="lucide lucide-chevron-right text-GRAY_700 h-4 w-4 shrink-0 cursor-pointer transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_8_"
      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
      data-orientation="vertical"
      data-slot="accordion-content"
      data-state="open"
      id="radix-_r_9_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="pt-0 pb-4"
      >
        Content 1
      </div>
    </div>
  </div>
  <div
    class="border-b"
    data-orientation="vertical"
    data-slot="accordion-item"
    data-state="closed"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_b_"
        aria-expanded="false"
        class="flex flex-1 items-center justify-between py-4 text-left text-sm font-medium transition-all [&[data-state=open]>svg]:rotate-90"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-slot="accordion-trigger"
        data-state="closed"
        id="radix-_r_a_"
        type="button"
      >
        Section 2
        <svg
          class="lucide lucide-chevron-right text-GRAY_700 h-4 w-4 shrink-0 cursor-pointer transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_a_"
      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
      data-orientation="vertical"
      data-slot="accordion-content"
      data-state="closed"
      hidden=""
      id="radix-_r_b_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;
